feat: se agrega consulta para obtener datos de solicitudes de acuerdo al correo de relacionado en una solicitud hija
