# swagger/swagger.json
@@ -1137,6 +1137,35 @@
                 }
             }
         },
+        "/solicitud/{correo}": {
+            "get": {
+                "tags": [
+                    "solicitud"
+                ],
+                "description": "get Solicitud by correo",
+                "operationId": "SolicitudController.Get solicitudes to evaluate",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "correo",
+                        "description": "The email to search",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Solicitud"
+                        }
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            }
+        },
         "/solicitud/{id}": {
             "get": {
                 "tags": [
@@ -2117,19 +2146,19 @@
         }
     },
     "definitions": {
-        "50100.\u003cnil\u003e.TrSolicitudPaquete": {
+        "52241.\u003cnil\u003e.TrSolicitudPaquete": {
             "title": "TrSolicitudPaquete",
             "type": "object"
         },
-        "62487.\u003cnil\u003e.Solicitante": {
+        "64969.\u003cnil\u003e.Solicitante": {
             "title": "Solicitante",
             "type": "object"
         },
-        "62521.\u003cnil\u003e.Observacion": {
+        "65003.\u003cnil\u003e.Observacion": {
             "title": "Observacion",
             "type": "object"
         },
-        "62555.\u003cnil\u003e.SolicitudEvolucionEstado": {
+        "65037.\u003cnil\u003e.SolicitudEvolucionEstado": {
             "title": "SolicitudEvolucionEstado",
             "type": "object"
         },
@@ -2485,7 +2514,7 @@
                     "$ref": "#/definitions/models.Paquete"
                 },
                 "SolicitudesPaquete": {
-                    "$ref": "#/definitions/50100.\u003cnil\u003e.TrSolicitudPaquete"
+                    "$ref": "#/definitions/52241.\u003cnil\u003e.TrSolicitudPaquete"
                 }
             }
         },
@@ -2498,13 +2527,13 @@
             "type": "object",
             "properties": {
                 "EvolucionesEstado": {
-                    "$ref": "#/definitions/62555.\u003cnil\u003e.SolicitudEvolucionEstado"
+                    "$ref": "#/definitions/65037.\u003cnil\u003e.SolicitudEvolucionEstado"
                 },
                 "Observaciones": {
-                    "$ref": "#/definitions/62521.\u003cnil\u003e.Observacion"
+                    "$ref": "#/definitions/65003.\u003cnil\u003e.Observacion"
                 },
                 "Solicitantes": {
-                    "$ref": "#/definitions/62487.\u003cnil\u003e.Solicitante"
+                    "$ref": "#/definitions/64969.\u003cnil\u003e.Solicitante"
                 },
                 "Solicitud": {
                     "$ref": "#/definitions/models.Solicitud"
